--- a/index.html
+++ b/index.html
@@ -3,18 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Progressive Web App (PWA) for learning web development lessons including HTML, CSS, and JavaScript.">
+    <meta name="author" content="Raj Krishnan">
     <title>CS Lessons PWA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Computer Science Lessons</h1>
+        <h1>Welcome to Computer Science Web App Lessons</h1>
+        <nav>
+            <ul class="lesson-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="lessons/lesson2.html">Semantic HTML</a></li>
+                <li><a href="lessons/lesson3.html">HTML Syntax & Structure</a></li>
+                <li><a href="lessons/lesson4.html">Links, Lists, and Media</a></li>
+                <li><a href="lessons/lesson5.html">Tables and Forms</a></li>
+                <li><a href="lessons/lesson6.html">CSS Styling Fundamentals</a></li>
+                <li><a href="lessons/lesson7.html">Layout and Positioning</a></li>
+                <li><a href="lessons/lesson8.html">Advanced CSS & Responsive</a></li>
+                <li><a href="lessons/lesson9.html">JavaScript Fundamentals</a></li>
+            </ul>
+        </nav>
     </header>
     <main id="content">
-        <h2>Lesson 1: Introduction to Computer Science</h2>
-        <p>This app will guide you through the basics of computer science using interactive lessons.</p>
-        <button id="nextLesson">Next Lesson</button>
+        <h2>Lesson 1: Introduction & Learning Objectives</h2>
+        <section>
+            <p>This app will guide you through the fundamentals of building web applications using semantic HTML, CSS, and JavaScript. Each lesson is interactive and hands-on.</p>
+            <h3>Learning Objectives</h3>
+            <ul>
+                <li>Write semantic HTML markup with proper structure and syntax</li>
+                <li>Style web pages using CSS with understanding of selectors, properties, and layout</li>
+                <li>Create interactive web pages using JavaScript fundamentals</li>
+                <li>Integrate HTML, CSS, and JavaScript to build complete web applications</li>
+                <li>Debug and troubleshoot code across all three technologies</li>
+            </ul>
+        </section>
+    <!-- Navigation handled in header -->
     </main>
     <script src="app.js"></script>
+    <footer>
+        <p>Learn more about web development: <a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank" rel="noopener">MDN Web Docs: Learn Web Development</a></p>
+    </footer>
 </body>
 </html>
