--- a/lessons/lesson2.html
+++ b/lessons/lesson2.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 2: What is a Computer?</title>
+    <title>Lesson 2: Semantic HTML Markup</title>
     <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
     <header>
-        <h1>Lesson 2: What is a Computer?</h1>
+        <h1>Lesson 2: Semantic HTML Markup</h1>
+        <nav>
+            <ul class="lesson-nav">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="lesson2.html">Semantic HTML</a></li>
+                <li><a href="lesson3.html">HTML Syntax & Structure</a></li>
+                <li><a href="lesson4.html">Links, Lists, and Media</a></li>
+                <li><a href="lesson5.html">Tables and Forms</a></li>
+                <li><a href="lesson6.html">CSS Styling Fundamentals</a></li>
+                <li><a href="lesson7.html">Layout and Positioning</a></li>
+                <li><a href="lesson8.html">Advanced CSS & Responsive</a></li>
+                <li><a href="lesson9.html">JavaScript Fundamentals</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <p>A computer is an electronic device that manipulates information or data. It can store, retrieve, and process data.</p>
-        <button onclick="window.location.href='../index.html'">Back to Home</button>
+        <section>
+            <h2>What is Semantic HTML?</h2>
+            <p>Semantic HTML uses elements that clearly describe their meaning in a human- and machine-readable way.
+                Examples include <code>&lt;header&gt;</code>, <code>&lt;nav&gt;</code>, <code>&lt;main&gt;</code>,
+                <code>&lt;section&gt;</code>, <code>&lt;article&gt;</code>, and <code>&lt;footer&gt;</code>.</p>
+            <h3>Why Use Semantic HTML?</h3>
+            <ul>
+                <li>Improves accessibility for screen readers</li>
+                <li>Makes code easier to read and maintain</li>
+                <li>Helps search engines understand your content</li>
+            </ul>
+            <h3>Example</h3>
+            <pre><code>&lt;main&gt;
+  &lt;section&gt;
+    &lt;h2&gt;About Me&lt;/h2&gt;
+    &lt;p&gt;I am a computer science student.&lt;/p&gt;
+  &lt;/section&gt;
+&lt;/main&gt;
+</code></pre>
+        </section>
+    <button onclick="window.location.href='../index.html'">Back to Home</button>
+    <button onclick="window.location.href='lesson3.html'">Next: HTML Syntax & Structure</button>
+    <p><a href="../demos/demo2.html" class="demo-link">View Demo: Semantic HTML</a></p>
     </main>
+    <footer>
+        <hr>
+        <p>Learn more about semantic HTML: <a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics#semantics_in_html" target="_blank" rel="noopener">MDN Web Docs: Semantics in HTML</a></p>
+        <p>Using Schema Validator: <a href="https://validator.schema.org/" target="_blank" rel="noopener">Validator for Semantic Web</a></p>
+        <p>All About Schemas: <a href="https://schema.org/" target="_blank" rel="noopener">schemas for structured data on the Internet</a></p>
+        <hr
+    </footer>
 </body>
+
 </html>
