Moved to Site folder

--- a/site/index.html
+++ b/site/index.html
@@ -22,6 +22,9 @@
                 <li><a href="lessons/lesson7.html">Layout and Positioning</a></li>
                 <li><a href="lessons/lesson8.html">Advanced CSS & Responsive</a></li>
                 <li><a href="lessons/lesson9.html">JavaScript Fundamentals</a></li>
+                <li><a href="lessons/lesson10.html">Control Flow & Data Structures</a></li>
+                <li><a href="lessons/lesson11.html">DOM Manipulation</a></li>
+                <li><a href="lessons/lesson12.html">Advanced JS & Integration</a></li>
             </ul>
         </nav>
     </header>
