--- a/site/lessons/lesson3.html
+++ b/site/lessons/lesson3.html
@@ -20,6 +20,9 @@
                 <li><a href="lesson7.html">Layout and Positioning</a></li>
                 <li><a href="lesson8.html">Advanced CSS & Responsive</a></li>
                 <li><a href="lesson9.html">JavaScript Fundamentals</a></li>
+                <li><a href="lesson10.html">Control Flow & Data Structures</a></li>
+                <li><a href="lesson11.html">DOM Manipulation</a></li>
+                <li><a href="lesson12.html">Advanced JS & Integration</a></li>
             </ul>
         </nav>
     </header>
