--- a/site/lessons/lesson8.html
+++ b/site/lessons/lesson8.html
@@ -12,14 +12,17 @@
     <nav>
       <ul class="lesson-nav">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="lesson2.html">Semantic HTML</a></li>
-        <li><a href="lesson3.html">HTML Syntax & Structure</a></li>
-        <li><a href="lesson4.html">Links, Lists, and Media</a></li>
-        <li><a href="lesson5.html">Tables and Forms</a></li>
-        <li><a href="lesson6.html">CSS Styling Fundamentals</a></li>
-        <li><a href="lesson7.html">Layout and Positioning</a></li>
-        <li><a href="lesson8.html">Advanced CSS & Responsive</a></li>
-        <li><a href="lesson9.html">JavaScript Fundamentals</a></li>
+  <li><a href="lesson2.html">Semantic HTML</a></li>
+  <li><a href="lesson3.html">HTML Syntax & Structure</a></li>
+  <li><a href="lesson4.html">Links, Lists, and Media</a></li>
+  <li><a href="lesson5.html">Tables and Forms</a></li>
+  <li><a href="lesson6.html">CSS Styling Fundamentals</a></li>
+  <li><a href="lesson7.html">Layout and Positioning</a></li>
+  <li><a href="lesson8.html">Advanced CSS & Responsive</a></li>
+  <li><a href="lesson9.html">JavaScript Fundamentals</a></li>
+  <li><a href="lesson10.html">Control Flow & Data Structures</a></li>
+  <li><a href="lesson11.html">DOM Manipulation</a></li>
+  <li><a href="lesson12.html">Advanced JS & Integration</a></li>
       </ul>
     </nav>
     </header>
