--- a/site/index.html
+++ b/site/index.html
@@ -41,6 +41,7 @@
                 <li>Debug and troubleshoot code across all three technologies</li>
             </ul>
         </section>
+        <button id="nextLesson" class="next-btn">Next Lesson</button>
     <!-- Navigation handled in header -->
     </main>
     <script src="app.js"></script>
