--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Computer Science Web App Lessons</h1>
+        <h1>Welcome to HTML, CSS, and JavaScript Lessons</h1>
         <nav>
             <ul class="lesson-nav">
                 <li><a href="/index.html">Home</a></li>
